--- a/index.html
+++ b/index.html
@@ -12,23 +12,29 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="site-header">
+      <nav class="container site-header-content">
         <a class="logo" href="./index.html"
           >Web <span class="logo-header">Studio</span></a
         >
-        <ul class="site-nav">
-          <li><a href="./index.html" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+        <ul class="list site-nav">
+          <li class="site-nav-item">
+            <a href="./index.html" class="link current">Студия</a>
+          </li>
+          <li class="site-nav-item">
+            <a href="./portfolio.html" class="link">Портфолио</a>
+          </li>
+          <li class="site-nav-item"><a href="" class="link">Контакты</a></li>
         </ul>
-        <ul class="contact-nav">
-          <li>
+        <ul class="list contact-nav">
+          <li class="site-nav-contact-item">
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li><a class="link" href="tel:380961111111">+38 096 111 11 11</a></li>
+          <li class="site-nav-contact-item">
+            <a class="link" href="tel:380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </nav>
     </header>
