--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
       <!--Заказ услуг-->
       <section class="header">
         <h1 class="header-title">
-          Эффективные решения<br />
-          для вашего бизнеса
+          Эффективные решения для вашего бизнеса
         </h1>
         <form>
           <button class="button" type="button">Заказать услугу</button>
@@ -53,32 +52,52 @@
       <section class="section">
         <h2 class="section-title function">Функции</h2>
         <ul class="features">
-          <li>
-            <img src="./img/antenna1.png" alt="антенна" width="70" />
+          <li class="features-list">
+            <img
+              class="features-logo"
+              src="./img/antenna1.png"
+              alt="антенна"
+              width="70"
+            />
             <h3 class="title">Внимание к деталям</h3>
             <p class="features-item">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
-            <img src="./img/clock1.svg" alt="часы" width="70" />
+          <li class="features-list">
+            <img
+              class="features-logo"
+              src="./img/clock1.svg"
+              alt="часы"
+              width="70"
+            />
             <h3 class="title">Пунктуальность</h3>
             <p class="features-item">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
-            <img src="./img/diagram1.svg" alt="диаграмма" width="70" />
+          <li class="features-list">
+            <img
+              class="features-logo"
+              src="./img/diagram1.svg"
+              alt="диаграмма"
+              width="70"
+            />
             <h3 class="title">Планирование</h3>
             <p class="features-item">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
-            <img src="./img/Group.svg" alt="космонафт" width="70" />
+          <li class="features-list">
+            <img
+              class="features-logo"
+              src="./img/Group.svg"
+              alt="космонафт"
+              width="70"
+            />
             <h3 class="title">Современные технологии</h3>
             <p class="features-item">
               Значимость этих проблем настолько очевидна, что реализация
@@ -90,20 +109,20 @@
       <!--Чем мы занимаемся-->
       <section class="section">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
-          <li>
+        <ul class="our-work">
+          <li class="works-list">
             <a href=""
               ><img src="./img/box1.jpg" alt="ноутбук" width="370" />
               <h3 class="subtitle">Десктопные приложения</h3></a
             >
           </li>
-          <li>
+          <li class="works-list">
             <a href=""
               ><img src="./img/box2.jpg" alt="смарфон" width="370" />
               <h3 class="subtitle">Мобильные приложения</h3></a
             >
           </li>
-          <li>
+          <li class="works-list">
             <a href=""
               ><img src="./img/box3.jpg" alt="монитор" width="370" />
               <h3 class="subtitle">Дизайнерские решения</h3></a
@@ -115,8 +134,8 @@
       <section class="section">
         <div class="team">
           <h2 class="section-title">Наша команда</h2>
-          <ul>
-            <li>
+          <ul class="our-team">
+            <li class="team-member">
               <img src="./img/img(1).jpg" alt="Николай Кучеренко" width="270" />
               <h3 class="team-list">Николай Кучеренко</h3>
               <p class="profession">Product designer</p>
@@ -127,7 +146,7 @@
                 <li><a href="">LinkedIn</a></li>
               </ul>
             </li>
-            <li>
+            <li class="team-member">
               <img src="./img/img(2).jpg" alt="Ольга Иванова" width="270" />
               <h3 class="team-list">Ольга Иванова</h3>
               <p class="profession">Frontend developer</p>
@@ -138,7 +157,7 @@
                 <li><a href="">LinkedIn</a></li>
               </ul>
             </li>
-            <li>
+            <li class="team-member">
               <img src="./img/img(3).jpg" alt="Андрей Шевченко" width="270" />
               <h3 class="team-list">Андрей Шевченко</h3>
               <p class="profession">Marketing</p>
@@ -149,7 +168,7 @@
                 <li><a href="">LinkedIn</a></li>
               </ul>
             </li>
-            <li>
+            <li class="team-member">
               <img src="./img/img(4).jpg" alt="Иван Николаев" />
               <h3 class="team-list">Иван Николаев</h3>
               <p class="profession">UI Designer</p>
@@ -164,53 +183,57 @@
         </div>
       </section>
       <!--Постоянные клиенты-->
-      <section class="section">
+      <section class="section our-clients">
         <h2 class="section-title">Постоянные клиенты</h2>
         <ul class="clients">
-          <li><a href="">Client1</a></li>
-          <li><a href="">Client2</a></li>
-          <li><a href="">Client3</a></li>
-          <li><a href="">Client4</a></li>
-          <li><a href="">Client5</a></li>
-          <li><a href="">Client6</a></li>
+          <li class="clients-list"><a href="">Client1</a></li>
+          <li class="clients-list"><a href="">Client2</a></li>
+          <li class="clients-list"><a href="">Client3</a></li>
+          <li class="clients-list"><a href="">Client4</a></li>
+          <li class="clients-list"><a href="">Client5</a></li>
+          <li class="clients-list"><a href="">Client6</a></li>
         </ul>
       </section>
     </main>
     <footer>
-      <div>
-        <a class="logo" href="./index.html"
-          >Web <span class="logo-footer">Studio</span></a
-        >
-        <address>
-          г. Киев, пр-т Леси Украинки, 26<br />
-          <a class="contacts" href="mailto:info@example.com"
-            >info@example.com</a
+      <div class="footer-container">
+        <div class="address-container">
+          <a class="logo" href="./index.html"
+            >Web <span class="logo-footer">Studio</span></a
           >
-          <a class="contacts" href="tel:380991111111"> +38 099 111 11 11</a>
-        </address>
+          <address class="address-list">
+            г. Киев, пр-т Леси Украинки, 26
+            <a class="contacts" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+            <a class="contacts" href="tel:380991111111"> +38 099 111 11 11</a>
+          </address>
+        </div>
+        <div class="subscribe">
+          <p class="footer-item">присоединяйтесь</p>
+          <ul class="social-link">
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Facebook</a></li>
+            <li><a href="">LinkedIn</a></li>
+          </ul>
+        </div>
+        <div class="subscribe-form">
+          <p class="footer-item">Подпишитесь на рассылку</p>
+          <form>
+            <input
+              type="text"
+              placeholder="E-mail"
+              name="Email"
+              id="Email-input"
+            />
+            <input type="submit" value="Подписаться" />
+          </form>
+        </div>
       </div>
-      <div>
-        <p class="footer-item">присоединяйтесь</p>
-        <ul class="social-link">
-          <li><a href="">Instagram</a></li>
-          <li><a href="">Twitter</a></li>
-          <li><a href="">Facebook</a></li>
-          <li><a href="">LinkedIn</a></li>
-        </ul>
+      <div class="copyright-info">
+        <div class="copyright">2020 | Developed by GoIT Students</div>
       </div>
-      <div>
-        <p class="footer-item">Подпишитесь на рассылку</p>
-        <form>
-          <input
-            type="text"
-            placeholder="E-mail"
-            name="Email"
-            id="Email-input"
-          />
-          <input type="submit" value="Подписаться" />
-        </form>
-      </div>
-      <div class="copyright">2020 | Developed by GoIT Students</div>
     </footer>
   </body>
 </html>
