--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>
         <ul class="list contact-nav">
           <li class="site-nav-contact-item">
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="link mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
