--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
         </ul>
         <ul class="list contact-nav">
           <li class="site-nav-contact-item">
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="link mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
@@ -40,7 +40,7 @@
     </header>
     <main>
       <section class="projects">
-        <form>
+        <form class="button-list">
           <button class="btn" type="button">Все</button>
           <button class="btn" type="button">Веб-сайты</button>
           <button class="btn" type="button">Приложения</button>
