--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </section>
       <!--Функции-->
       <section class="section">
-        <h2 class="section-title function">Функции</h2>
+        <h2 class="function">Функции</h2>
         <ul class="features">
           <li class="features-list">
             <img
