--- a/index.html
+++ b/index.html
@@ -50,89 +50,93 @@
       </section>
       <!--Функции-->
       <section class="section">
-        <h2 class="function">Функции</h2>
-        <ul class="features">
-          <li class="features-list">
-            <img
-              class="features-logo"
-              src="./img/antenna1.png"
-              alt="антенна"
-              width="70"
-            />
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="features-item">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="features-list">
-            <img
-              class="features-logo"
-              src="./img/clock1.svg"
-              alt="часы"
-              width="70"
-            />
-            <h3 class="title">Пунктуальность</h3>
-            <p class="features-item">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="features-list">
-            <img
-              class="features-logo"
-              src="./img/diagram1.svg"
-              alt="диаграмма"
-              width="70"
-            />
-            <h3 class="title">Планирование</h3>
-            <p class="features-item">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="features-list">
-            <img
-              class="features-logo"
-              src="./img/Group.svg"
-              alt="космонафт"
-              width="70"
-            />
-            <h3 class="title">Современные технологии</h3>
-            <p class="features-item">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="function">Функции</h2>
+          <ul class="features">
+            <li class="features-list">
+              <img
+                class="features-logo"
+                src="./img/antenna1.png"
+                alt="антенна"
+                width="70"
+              />
+              <h3 class="title">Внимание к деталям</h3>
+              <p class="features-item">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="features-list">
+              <img
+                class="features-logo"
+                src="./img/clock1.svg"
+                alt="часы"
+                width="70"
+              />
+              <h3 class="title">Пунктуальность</h3>
+              <p class="features-item">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="features-list">
+              <img
+                class="features-logo"
+                src="./img/diagram1.svg"
+                alt="диаграмма"
+                width="70"
+              />
+              <h3 class="title">Планирование</h3>
+              <p class="features-item">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="features-list">
+              <img
+                class="features-logo"
+                src="./img/Group.svg"
+                alt="космонафт"
+                width="70"
+              />
+              <h3 class="title">Современные технологии</h3>
+              <p class="features-item">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Чем мы занимаемся-->
       <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="our-work">
-          <li class="works-list">
-            <a href=""
-              ><img src="./img/box1.jpg" alt="ноутбук" width="370" />
-              <h3 class="subtitle">Десктопные приложения</h3></a
-            >
-          </li>
-          <li class="works-list">
-            <a href=""
-              ><img src="./img/box2.jpg" alt="смарфон" width="370" />
-              <h3 class="subtitle">Мобильные приложения</h3></a
-            >
-          </li>
-          <li class="works-list">
-            <a href=""
-              ><img src="./img/box3.jpg" alt="монитор" width="370" />
-              <h3 class="subtitle">Дизайнерские решения</h3></a
-            >
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="our-work">
+            <li class="works-list">
+              <a href=""
+                ><img src="./img/box1.jpg" alt="ноутбук" width="370" />
+                <h3 class="subtitle">Десктопные приложения</h3></a
+              >
+            </li>
+            <li class="works-list">
+              <a href=""
+                ><img src="./img/box2.jpg" alt="смарфон" width="370" />
+                <h3 class="subtitle">Мобильные приложения</h3></a
+              >
+            </li>
+            <li class="works-list">
+              <a href=""
+                ><img src="./img/box3.jpg" alt="монитор" width="370" />
+                <h3 class="subtitle">Дизайнерские решения</h3></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Наша команда-->
-      <section class="section">
-        <div class="team">
+      <section class="section team">
+        <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="our-team">
             <li class="team-member">
@@ -184,55 +188,59 @@
       </section>
       <!--Постоянные клиенты-->
       <section class="section our-clients">
-        <h2 class="section-title">Постоянные клиенты</h2>
-        <ul class="clients">
-          <li class="clients-list"><a href="">Client1</a></li>
-          <li class="clients-list"><a href="">Client2</a></li>
-          <li class="clients-list"><a href="">Client3</a></li>
-          <li class="clients-list"><a href="">Client4</a></li>
-          <li class="clients-list"><a href="">Client5</a></li>
-          <li class="clients-list"><a href="">Client6</a></li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="clients">
+            <li class="clients-list"><a href="">Client1</a></li>
+            <li class="clients-list"><a href="">Client2</a></li>
+            <li class="clients-list"><a href="">Client3</a></li>
+            <li class="clients-list"><a href="">Client4</a></li>
+            <li class="clients-list"><a href="">Client5</a></li>
+            <li class="clients-list"><a href="">Client6</a></li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
-      <div class="footer-container">
-        <div class="address-container">
-          <a class="logo" href="./index.html"
-            >Web <span class="logo-footer">Studio</span></a
-          >
-          <address class="address-list">
-            г. Киев, пр-т Леси Украинки, 26
-            <a class="contacts" href="mailto:info@example.com"
-              >info@example.com</a
+      <div class="container">
+        <div class="footer-container">
+          <div class="address-container">
+            <a class="logo" href="./index.html"
+              >Web <span class="logo-footer">Studio</span></a
             >
-            <a class="contacts" href="tel:380991111111"> +38 099 111 11 11</a>
-          </address>
+            <address class="address-list">
+              г. Киев, пр-т Леси Украинки, 26
+              <a class="contacts" href="mailto:info@example.com"
+                >info@example.com</a
+              >
+              <a class="contacts" href="tel:380991111111"> +38 099 111 11 11</a>
+            </address>
+          </div>
+          <div class="subscribe">
+            <p class="footer-item">присоединяйтесь</p>
+            <ul class="social-link">
+              <li><a href="">Instagram</a></li>
+              <li><a href="">Twitter</a></li>
+              <li><a href="">Facebook</a></li>
+              <li><a href="">LinkedIn</a></li>
+            </ul>
+          </div>
+          <div class="subscribe-form">
+            <p class="footer-item">Подпишитесь на рассылку</p>
+            <form>
+              <input
+                type="text"
+                placeholder="E-mail"
+                name="Email"
+                id="Email-input"
+              />
+              <input type="submit" value="Подписаться" />
+            </form>
+          </div>
         </div>
-        <div class="subscribe">
-          <p class="footer-item">присоединяйтесь</p>
-          <ul class="social-link">
-            <li><a href="">Instagram</a></li>
-            <li><a href="">Twitter</a></li>
-            <li><a href="">Facebook</a></li>
-            <li><a href="">LinkedIn</a></li>
-          </ul>
+        <div class="copyright-info">
+          <div class="copyright">2020 | Developed by GoIT Students</div>
         </div>
-        <div class="subscribe-form">
-          <p class="footer-item">Подпишитесь на рассылку</p>
-          <form>
-            <input
-              type="text"
-              placeholder="E-mail"
-              name="Email"
-              id="Email-input"
-            />
-            <input type="submit" value="Подписаться" />
-          </form>
-        </div>
-      </div>
-      <div class="copyright-info">
-        <div class="copyright">2020 | Developed by GoIT Students</div>
       </div>
     </footer>
   </body>
