--- a/portfolio.html
+++ b/portfolio.html
@@ -39,6 +39,7 @@
       </nav>
     </header>
     <main>
+      <div class="container">
       <section class="projects">
         <form class="button-list">
           <button class="btn" type="button">Все</button>
@@ -158,46 +159,49 @@
             </a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <footer>
-      <div class="footer-container">
-        <div class="address-container">
-          <a class="logo" href="./index.html"
-            >Web <span class="logo-footer">Studio</span></a
-          >
-          <address class="address-list">
-            г. Киев, пр-т Леси Украинки, 26
-            <a class="contacts" href="mailto:info@example.com"
-              >info@example.com</a
+      <div class="container">
+        <div class="footer-container">
+          <div class="address-container">
+            <a class="logo" href="./index.html"
+              >Web <span class="logo-footer">Studio</span></a
             >
-            <a class="contacts" href="tel:380991111111"> +38 099 111 11 11</a>
-          </address>
+            <address class="address-list">
+              г. Киев, пр-т Леси Украинки, 26
+              <a class="contacts" href="mailto:info@example.com"
+                >info@example.com</a
+              >
+              <a class="contacts" href="tel:380991111111"> +38 099 111 11 11</a>
+            </address>
+          </div>
+          <div class="subscribe">
+            <p class="footer-item">присоединяйтесь</p>
+            <ul class="social-link">
+              <li><a href="">Instagram</a></li>
+              <li><a href="">Twitter</a></li>
+              <li><a href="">Facebook</a></li>
+              <li><a href="">LinkedIn</a></li>
+            </ul>
+          </div>
+          <div class="subscribe-form">
+            <p class="footer-item">Подпишитесь на рассылку</p>
+            <form>
+              <input
+                type="text"
+                placeholder="E-mail"
+                name="Email"
+                id="Email-input"
+              />
+              <input type="submit" value="Подписаться" />
+            </form>
+          </div>
         </div>
-        <div class="subscribe">
-          <p class="footer-item">присоединяйтесь</p>
-          <ul class="social-link">
-            <li><a href="">Instagram</a></li>
-            <li><a href="">Twitter</a></li>
-            <li><a href="">Facebook</a></li>
-            <li><a href="">LinkedIn</a></li>
-          </ul>
+        <div class="copyright-info">
+          <div class="copyright">2020 | Developed by GoIT Students</div>
         </div>
-        <div class="subscribe-form">
-          <p class="footer-item">Подпишитесь на рассылку</p>
-          <form>
-            <input
-              type="text"
-              placeholder="E-mail"
-              name="Email"
-              id="Email-input"
-            />
-            <input type="submit" value="Подписаться" />
-          </form>
-        </div>
-      </div>
-      <div class="copyright-info">
-        <div class="copyright">2020 | Developed by GoIT Students</div>
       </div>
     </footer>
   </body>
