передвинул паддинг с дива на секкцию

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </form>
       </section>
       <!--Функции-->
-      <section class="section">
+      <section class="section description">
         <div class="container">
           <h2 class="function">Функции</h2>
           <ul class="features">
