--- a/portfolio.html
+++ b/portfolio.html
@@ -39,127 +39,127 @@
       </nav>
     </header>
     <main>
-      <div class="container">
       <section class="projects">
-        <form class="button-list">
-          <button class="btn" type="button">Все</button>
-          <button class="btn" type="button">Веб-сайты</button>
-          <button class="btn" type="button">Приложения</button>
-          <button class="btn" type="button">Дизайн</button>
-          <button class="btn" type="button">Маркетинг</button>
-        </form>
-        <h1 class="projects-title">Проекты</h1>
-        <ul class="projects-scroll">
-          <li class="project-list">
-            <a class="project-link" href="">
-              <img src="./img/project1.jpg" alt="our people" />
-              <h2 class="project-item">Технокряк</h2>
-              <p class="project-type">Веб-сайт</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li class="project-list">
-            <a class="project-link" href="">
-              <img src="./img/project2.jpg" alt="basketball duel" />
-              <h2 class="project-item">Постер New Orlean vs Golden Star</h2>
-              <p class="project-type">Дизайн</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li class="project-list">
-            <a class="project-link" href="">
-              <img src="./img/project3.jpg" alt="restaurant logo" />
-              <h2 class="project-item">Ресторан Seafood</h2>
-              <p class="project-type">Приложение</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li class="project-list">
-            <a class="project-link" href="">
-              <img src="./img/project4.jpg" alt="headphones" />
-              <h2 class="project-item">Проект Prime</h2>
-              <p class="project-type">Маркетинг</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li class="project-list">
-            <a class="project-link" href="">
-              <img src="./img/project5.jpg" alt="two boxes" />
-              <h2 class="project-item">Проект Boxes</h2>
-              <p class="project-type">Приложение</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li class="project-list">
-            <a class="project-link" href="">
-              <img src="./img/project6.jpg" alt="monitor apple" />
-              <h2 class="project-item">Inspiration has no Borders</h2>
-              <p class="project-type">Веб-сайт</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li class="project-list">
-            <a class="project-link" href="">
-              <img src="./img/project7.jpg" alt="book" />
-              <h2 class="project-item">Издание Limited Edition</h2>
-              <p class="project-type">Дизайн</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li class="project-list">
-            <a class="project-link" href="">
-              <img src="./img/project8.jpg" alt="label" />
-              <h2 class="project-item">Проект LAB</h2>
-              <p class="project-type">Маркетинг</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li class="project-list">
-            <a class="project-link" href="">
-              <img src="./img/project9.jpg" alt="laptop" />
-              <h2 class="project-item">Growing Business</h2>
-              <p class="project-type">Приложение</p>
-              <p>
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-        </ul>
-      </div>
+        <div class="container">
+          <form class="button-list">
+            <button class="btn" type="button">Все</button>
+            <button class="btn" type="button">Веб-сайты</button>
+            <button class="btn" type="button">Приложения</button>
+            <button class="btn" type="button">Дизайн</button>
+            <button class="btn" type="button">Маркетинг</button>
+          </form>
+          <h1 class="projects-title">Проекты</h1>
+          <ul class="projects-scroll">
+            <li class="project-list">
+              <a class="project-link" href="">
+                <img src="./img/project1.jpg" alt="our people" />
+                <h2 class="project-item">Технокряк</h2>
+                <p class="project-type">Веб-сайт</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <img src="./img/project2.jpg" alt="basketball duel" />
+                <h2 class="project-item">Постер New Orlean vs Golden Star</h2>
+                <p class="project-type">Дизайн</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <img src="./img/project3.jpg" alt="restaurant logo" />
+                <h2 class="project-item">Ресторан Seafood</h2>
+                <p class="project-type">Приложение</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <img src="./img/project4.jpg" alt="headphones" />
+                <h2 class="project-item">Проект Prime</h2>
+                <p class="project-type">Маркетинг</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <img src="./img/project5.jpg" alt="two boxes" />
+                <h2 class="project-item">Проект Boxes</h2>
+                <p class="project-type">Приложение</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <img src="./img/project6.jpg" alt="monitor apple" />
+                <h2 class="project-item">Inspiration has no Borders</h2>
+                <p class="project-type">Веб-сайт</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <img src="./img/project7.jpg" alt="book" />
+                <h2 class="project-item">Издание Limited Edition</h2>
+                <p class="project-type">Дизайн</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <img src="./img/project8.jpg" alt="label" />
+                <h2 class="project-item">Проект LAB</h2>
+                <p class="project-type">Маркетинг</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <img src="./img/project9.jpg" alt="laptop" />
+                <h2 class="project-item">Growing Business</h2>
+                <p class="project-type">Приложение</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
