--- a/portfolio.html
+++ b/portfolio.html
@@ -170,7 +170,7 @@
               >Web <span class="logo-footer">Studio</span></a
             >
             <address class="address-list">
-              г. Киев, пр-т Леси Украинки, 26
+              <p>г. Киев, пр-т Леси Украинки, 26</p>
               <a class="contacts" href="mailto:info@example.com"
                 >info@example.com</a
               >
