--- a/portfolio.html
+++ b/portfolio.html
@@ -166,7 +166,7 @@
       <div class="container">
         <div class="footer-container">
           <div class="address-container">
-            <a class="logo" href="./index.html"
+            <a class="logo footer" href="./index.html"
               >Web <span class="logo-footer">Studio</span></a
             >
             <address class="address-list">
