--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       <!--Заказ услуг-->
       <section class="header">
         <h1 class="header-title">
-          Эффективные решения</br> для вашего бизнеса
+          Эффективные решения <br />
+          для вашего бизнеса
         </h1>
         <form>
           <button class="button" type="button">Заказать услугу</button>
