добавлены паддинги для секций,ширина в футере

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
         </ul>
         <ul class="list contact-nav">
           <li class="site-nav-contact-item">
-            <a class="link mail" href="mailto:info@devstudio.com"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
@@ -41,13 +41,13 @@
     <main>
       <section class="projects">
         <div class="container">
-          <form class="button-list">
+          <div class="button-list">
             <button class="btn" type="button">Все</button>
             <button class="btn" type="button">Веб-сайты</button>
             <button class="btn" type="button">Приложения</button>
             <button class="btn" type="button">Дизайн</button>
             <button class="btn" type="button">Маркетинг</button>
-          </form>
+          </div>
           <h1 class="projects-title">Проекты</h1>
           <ul class="projects-scroll">
             <li class="project-list">
