--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
                 <div class="project-discription">
                   <h2 class="project-item">Технокряк</h2>
                   <p class="project-type">Веб-сайт</p>
-                  <p>
+                  <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -70,7 +70,7 @@
                 <div class="project-discription">
                   <h2 class="project-item">Постер New Orlean vs Golden Star</h2>
                   <p class="project-type">Дизайн</p>
-                  <p>
+                  <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -84,7 +84,7 @@
                 <div class="project-discription">
                   <h2 class="project-item">Ресторан Seafood</h2>
                   <p class="project-type">Приложение</p>
-                  <p>
+                  <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -98,7 +98,7 @@
                 <div class="project-discription">
                   <h2 class="project-item">Проект Prime</h2>
                   <p class="project-type">Маркетинг</p>
-                  <p>
+                  <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -112,7 +112,7 @@
                 <div class="project-discription">
                   <h2 class="project-item">Проект Boxes</h2>
                   <p class="project-type">Приложение</p>
-                  <p>
+                  <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -126,7 +126,7 @@
                 <div class="project-discription">
                   <h2 class="project-item">Inspiration has no Borders</h2>
                   <p class="project-type">Веб-сайт</p>
-                  <p>
+                  <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -140,7 +140,7 @@
                 <div class="project-discription">
                   <h2 class="project-item">Издание Limited Edition</h2>
                   <p class="project-type">Дизайн</p>
-                  <p>
+                  <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -154,7 +154,7 @@
                 <div class="project-discription">
                   <h2 class="project-item">Проект LAB</h2>
                   <p class="project-type">Маркетинг</p>
-                  <p>
+                  <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -168,7 +168,7 @@
                 <div class="project-discription">
                   <h2 class="project-item">Growing Business</h2>
                   <p class="project-type">Приложение</p>
-                  <p>
+                  <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
