--- a/index.html
+++ b/index.html
@@ -150,11 +150,7 @@
           <ul class="our-team">
             <li class="team-member">
               <div class="team-card">
-                <img
-                  src="./img/img(1).jpg"
-                  alt="Николай Кучеренко"
-                  width="270"
-                />
+                <img src="./img/img1.jpg" alt="Николай Кучеренко" width="270" />
                 <div class="team-info">
                   <h3 class="team-list">Николай Кучеренко</h3>
                   <p class="profession">Product designer</p>
@@ -169,7 +165,7 @@
             </li>
             <li class="team-member">
               <div class="team-card">
-                <img src="./img/img(2).jpg" alt="Ольга Иванова" width="270" />
+                <img src="./img/img2.jpg" alt="Ольга Иванова" width="270" />
                 <div class="team-info">
                   <h3 class="team-list">Ольга Иванова</h3>
                   <p class="profession">Frontend developer</p>
@@ -184,7 +180,7 @@
             </li>
             <li class="team-member">
               <div class="team-card">
-                <img src="./img/img(3).jpg" alt="Андрей Шевченко" width="270" />
+                <img src="./img/img3.jpg" alt="Андрей Шевченко" width="270" />
                 <div class="team-info">
                   <h3 class="team-list">Андрей Шевченко</h3>
                   <p class="profession">Marketing</p>
@@ -199,7 +195,7 @@
             </li>
             <li class="team-member">
               <div class="team-card">
-                <img src="./img/img(4).jpg" alt="Иван Николаев" />
+                <img src="./img/img4.jpg" alt="Иван Николаев" />
                 <div class="team-info">
                   <h3 class="team-list">Иван Николаев</h3>
                   <p class="profession">UI Designer</p>
